Workaround layout issue caused by Bootstrap 4.5.0 upgrade

--- a/themes/wz2100net/assets/css/style.css
+++ b/themes/wz2100net/assets/css/style.css
@@ -14,6 +14,12 @@ body{
 a,button{transition: background .3s ease-in-out;outline: none!important;} /* Prevent ugly blue glow on chrome and safari */
 a:hover{text-decoration: none; cursor:pointer;}
 
+/* = Fix layout issue caused by newer Bootstrap
+-------------------------------------------------------------- */
+.col {
+	min-width: auto;
+}
+
 /* = Blocs
 -------------------------------------------------------------- */
 
